example-conf/ingress-1g.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    ingress.neo9.io/access-operator-enabled: "true"
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.neo9.io/allowed-visitors: neo9
  name: demoingress1
  namespace: default
spec:
  rules:
  - host: demoingress1.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          serviceName: nginx-ingress-controller-default-backend
          servicePort: 80
        path: /demo
