example-conf/ingress-xposer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.neo9.io/access-operator-enabled: "true" # because xposer can't place labels on generated resource
    ingress.neo9.io/allowed-visitors: neo9
  name: xposer-demoingress
  namespace: default
spec:
  rules:
  - host: xposer-demoingress.dev-xmichel.neokube.neo9.pro
    http:
      paths:
      - backend:
          serviceName: nginx-ingress-controller-default-backend
          servicePort: 80
        path: /demo
